# cpp_projects

./: .clang-format  .editorconfig  .gitignore  README.md
2026-01-30/: linearly-linked-list.cpp  readme.md
aliases/: main.cpp
big-boy/: .gitignore  blobinc-gen.c  build.ps1  main.c
binary-calc/: main.cpp
black-hole/: main.cpp
calc/: main.cpp
cheat-engine-practice/: README.md  cheat-engine-practice.cpp
count-to-infinity/: count-to-infinity.cpp
dbd-cheat-external_x32/: README.md  dbd-cheat-external_x32.cpp
dc-grab/: README.md  grab.cpp  grab.h  main.cpp
doom-fire/: main.cpp
dvd-bounce/: main.cpp
factorial/: factorial.cpp
for-each-loop-test/: for-each-loop-test.cpp
idk/: README.md  main.cpp
logarithm/: logarithm.cpp
matrix-rain/: main.cpp
multi-file-project/: README.md  cmake-vs-makefile.md  main.cpp  utils.cpp
number-guess/: main.cpp
orbiting-spheres/: main.cpp
pass-gen/: export.txt  main.cpp
plasma-effect/: main.cpp
practice-tests/: CMakeLists.txt  readme.md
practice-tests/10/: CMakeLists.txt  first_unique-test.cpp  first_unique.cpp  first_unique.h  gtest.md  main.cpp
ptr-sandbox/: README.md  main.cpp
rotating-cube/: main.cpp
run-forever/: run-forever.cpp
russian-roulette/: russian-roulette.cpp  tempCodeRunnerFile.cpp
something-with-words/: main.cpp
spinner.cpp/: main.cpp
spinning-galaxy/: main.cpp
story-game-example/: story-game-example.cpp
termcolor/: termcolor.cpp  termcolor.hpp
todo/: main.cpp
vypocet-urokov/: vypocet-urokov.cpp
windows-beep/: main.cpp  notes.h
xor/: main.cpp  readme.md
(+45 files in other folders)
